# rescript-linter

./: .gitignore  .gitmodules  .ocamlformat  Changelog.md  README.md  default.nix  dune  dune-project  flake.nix  rescript_linter.opam  rescript_linter.opam.template
compiler/: dune
compiler/bsb/: bsb_arg.ml  bsb_build_schemas.ml  bsb_build_util.ml  bsb_build_util.mli  bsb_clean.ml  bsb_config_parse.ml  bsb_config_parse.mli  bsb_config_types.ml  bsb_exception.ml  bsb_jsx.ml  bsb_ninja_check.ml  bsb_ninja_gen.ml  bsb_ninja_regen.ml  bsb_ninja_rule.ml  bsb_ninja_rule.mli  bsb_package_kind.ml  bsb_package_specs.ml  bsb_parse_sources.ml  bsb_pkg.ml  bsb_pkg_types.ml  bsb_warning.ml  bsb_watcher_gen.mli  bsb_world.ml
compiler/bsb_exe/: dune  rescript_main.ml
compiler/bsb_helper/: bsb_db_decode.ml
compiler/bsc/: dune  rescript_compiler_main.ml
compiler/common/: bs_version.ml  bs_version.mli  js_config.ml  js_config.mli  pattern_printer.ml
compiler/core/: bs_conditional_initial.ml  design.md  dune  j.ml  js_analyzer.ml  js_call_info.ml  js_call_info.mli  js_cmj_format.ml  js_cmj_format.mli  js_dump.ml  js_dump_property.ml  js_dump_string.ml  js_exp_make.ml  js_exp_make.mli  js_fold.ml  js_implementation.ml  js_name_of_module_id.ml  js_of_lam_block.ml  js_op.ml  js_op_util.ml  js_packages_info.ml  js_pass_external_shadow.ml  js_pass_external_shadow.mli  js_pass_flatten_and_mark_dead.ml  js_pass_scope.ml  js_record_fold.ml  js_record_iter.ml  js_record_map.ml  lam.ml  lam.mli  lam_analysis.ml  lam_arity_analysis.ml  lam_bounded_vars.ml  lam_compat.ml  lam_compat.mli  lam_compile.ml  lam_compile_const.ml  lam_compile_external_call.ml  lam_compile_external_call.mli  lam_compile_main.ml  (+17 more)
compiler/depends/: bs_exception.ml
compiler/ext/: warnings.ml  warnings.mli
compiler/frontend/: ast_attributes.ml  ast_attributes.mli  ast_comb.ml  ast_comb.mli  ast_compatible.ml  ast_compatible.mli  ast_core_type.ml  ast_core_type.mli  ast_core_type_class_type.ml  ast_derive_abstract.ml  ast_derive_js_mapper.ml  ast_derive_projector.ml  ast_exp_apply.ml  ast_exp_extension.ml  ast_exp_handle_external.ml  ast_external_process.ml  ast_literal.ml  ast_literal.mli  ast_pat.ml  ast_tuple_pattern_flatten.ml  ast_typ_uncurry.ml  ast_typ_uncurry.mli  ast_uncurry_gen.ml  ast_uncurry_gen.mli  ast_utf8_string_interp.ml  ast_util.ml  ast_util.mli  bs_ast_invariant.ml  bs_ast_mapper.ml  bs_builtin_ppx.ml  bs_syntaxerr.ml  bs_syntaxerr.mli  external_arg_spec.ml  ppx_entry.ml  (+5 more)
(+89 files in other folders)
