(lang dune 3.3)

(name rescript_linter)

(generate_opam_files true)

(source
 (github plow-technologies/rescript-linter))

(authors "Shulhi Sapli")

(maintainers "Shulhi Sapli")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name rescript_linter)
 (synopsis "AST-based linter for ReScript")
 (description "AST-based linter for ReScript")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
